HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/BitcopyDropConflict/Expected.uv
//! Expected diagnostic metadata for the BitcopyDropConflict rejected-source specimen.

expectedDiagnostic("E-TYP-2621", "rule.14.BitcopyDrop-Conflict")
